# Cold

./: .gitignore  config_example.toml
cold_data/: Cargo.toml
cold_data/migrations/2018-07-31-120510_commands/: up.sql
cold_data/src/: cache.rs  lib.rs  models.rs  schema.rs
commands/: Cargo.toml
commands/src/: lib.rs
irc/: Cargo.toml
irc/src/: client.rs  lib.rs
src/: config.rs  main.rs
web_frontend/: Cargo.toml
web_frontend/src/: lib.rs  ws_update.rs
web_frontend/static/: commands.js  index.html  stats.js
